# fullstack-task-app

./: .gitignore
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2025_07_31_1846-923b65c65e3a_initial_migration_users_and_tasks_tables.py
backend/app/: crud.py  database.py  main.py  models.py  schemas.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: TaskForm.tsx  TaskList.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
